# vigilant-animals

./: README.md  pyproject.toml
server/: board.py  card.py  keywords.py  node.py  units.py
src/: client.py  run_server.sh  server.py
src/client/: card.py
src/vigialnt-server/: node.py  units.py
src/vigilant_server/: __init__.py  board.py  card.py  deckbuilder.py  node.py  player.py  spell_effect.py  spells.py  unit_effect.py  units.py
test/: board__test.py
